fixes in gaps

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -81,11 +81,13 @@ body {
 }
 
 #member {
+    margin-left: 100px;
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(150px, auto);
-    grid-gap: 10px;
-    transition: all 0.3s;
+    grid-auto-rows: minmax(10px, auto);
+    grid-column-gap: 500px;
+    grid-row-gap: 50px;
 }
 
 /* #member:hover {
